added player man and npc tests

--- a/GhostGang/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GhostGang/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -305,6 +305,8 @@ MRUItem16=/UltraleapTracking/Examples/LeapHandsPawn
 MRUItem17=/Game/GhostGang/GhostMode
 
 [PlacementMode]
+RecentlyPlaced=/Game/GhostGang/BP_NewPlayerMan.BP_NewPlayerMan;
+RecentlyPlaced=/Game/GhostGang/BP_npcTest.BP_npcTest;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/GhostGang/HotelRoom.HotelRoom;
@@ -1185,6 +1187,86 @@ RecastNavMesh.Cooking=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
 Player_C.Default=True
+BP_npcTest_C.TransformCommon=True
+BP_npcTest_C.Animation=True
+BP_npcTest_C.Mesh=True
+BP_npcTest_C.Clothing=True
+BP_npcTest_C.Physics=True
+BP_npcTest_C.Collision=True
+BP_npcTest_C.MasterPoseComponent=True
+BP_npcTest_C.Lighting=True
+BP_npcTest_C.ClothingSimulation=True
+BP_npcTest_C.Rendering=True
+BP_npcTest_C.SkinWeights=True
+BP_npcTest_C.Navigation=True
+BP_npcTest_C.VirtualTexture=True
+BP_npcTest_C.Tags=True
+BP_npcTest_C.Activation=True
+BP_npcTest_C.Cooking=True
+BP_npcTest_C.Character Movement (General Settings)=True
+BP_npcTest_C.Character Movement: Walking=True
+BP_npcTest_C.Character Movement: Jumping / Falling=True
+BP_npcTest_C.Character Movement (Networking)=True
+BP_npcTest_C.Character Movement: Swimming=True
+BP_npcTest_C.Character Movement: Flying=True
+BP_npcTest_C.Character Movement: Custom Movement=True
+BP_npcTest_C.Character Movement (Rotation Settings)=True
+BP_npcTest_C.Character Movement: Physics Interaction=True
+BP_npcTest_C.Character Movement=True
+BP_npcTest_C.Character Movement: Avoidance=True
+BP_npcTest_C.RootMotion=True
+BP_npcTest_C.Character Movement: NavMesh Movement=True
+BP_npcTest_C.NavMovement=True
+BP_npcTest_C.Velocity=True
+BP_npcTest_C.PlanarMovement=True
+BP_npcTest_C.MovementComponent=True
+BP_npcTest_C.Shape=True
+BP_npcTest_C.Character=True
+BP_npcTest_C.Camera=True
+BP_npcTest_C.Pawn=True
+BP_npcTest_C.Replication=True
+BP_npcTest_C.Input=True
+BP_npcTest_C.Actor=True
+BP_NewPlayerMan_C.TransformCommon=True
+BP_NewPlayerMan_C.Animation=True
+BP_NewPlayerMan_C.Mesh=True
+BP_NewPlayerMan_C.Clothing=True
+BP_NewPlayerMan_C.Physics=True
+BP_NewPlayerMan_C.Collision=True
+BP_NewPlayerMan_C.MasterPoseComponent=True
+BP_NewPlayerMan_C.Lighting=True
+BP_NewPlayerMan_C.ClothingSimulation=True
+BP_NewPlayerMan_C.Rendering=True
+BP_NewPlayerMan_C.SkinWeights=True
+BP_NewPlayerMan_C.Navigation=True
+BP_NewPlayerMan_C.VirtualTexture=True
+BP_NewPlayerMan_C.Tags=True
+BP_NewPlayerMan_C.Activation=True
+BP_NewPlayerMan_C.Cooking=True
+BP_NewPlayerMan_C.Character Movement (General Settings)=True
+BP_NewPlayerMan_C.Character Movement: Walking=True
+BP_NewPlayerMan_C.Character Movement: Jumping / Falling=True
+BP_NewPlayerMan_C.Character Movement (Networking)=True
+BP_NewPlayerMan_C.Character Movement: Swimming=True
+BP_NewPlayerMan_C.Character Movement: Flying=True
+BP_NewPlayerMan_C.Character Movement: Custom Movement=True
+BP_NewPlayerMan_C.Character Movement (Rotation Settings)=True
+BP_NewPlayerMan_C.Character Movement: Physics Interaction=True
+BP_NewPlayerMan_C.Character Movement=True
+BP_NewPlayerMan_C.Character Movement: Avoidance=True
+BP_NewPlayerMan_C.RootMotion=True
+BP_NewPlayerMan_C.Character Movement: NavMesh Movement=True
+BP_NewPlayerMan_C.NavMovement=True
+BP_NewPlayerMan_C.Velocity=True
+BP_NewPlayerMan_C.PlanarMovement=True
+BP_NewPlayerMan_C.MovementComponent=True
+BP_NewPlayerMan_C.Shape=True
+BP_NewPlayerMan_C.Character=True
+BP_NewPlayerMan_C.Camera=True
+BP_NewPlayerMan_C.Pawn=True
+BP_NewPlayerMan_C.Replication=True
+BP_NewPlayerMan_C.Input=True
+BP_NewPlayerMan_C.Actor=True
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1253,8 +1335,8 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailPropertyExpansion]
 ChildActorComponent="\"Object.ChildActorComponent.ChildActorTemplate\" "
-SceneComponent="\"Object.ChildActorComponent.ChildActorTemplate\" "
-ActorComponent="\"Object.ChildActorComponent.ChildActorTemplate\" "
+SceneComponent=
+ActorComponent=
 Object=
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
 StaticMeshComponent=
