--- a/GhostGang/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GhostGang/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GhostGang/BP/Traps
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -182,14 +182,10 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/GhostGang/Levels/Level01
+LastLevel=/Game/GhostGang/Levels/NewMenuLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/GhostGang/BP/Traps/HauntedLamp.HauntedLamp
-OpenAssetsAtExit=/Game/GhostGang/BP/HotelRoom.HotelRoom
-OpenAssetsAtExit=/Game/GhostGang/Levels/Level01.Level01:PersistentLevel.Level01
-OpenAssetsAtExit=/Game/GhostGang/BP/WDGT/DemoInstructions.DemoInstructions
 
 [PluginBrowser]
 InstalledPlugins=UltraleapTracking
@@ -214,8 +210,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MRU]
-MRUItem0=/Game/GhostGang/Levels/Level01
-MRUItem1=/Game/GhostGang/Levels/NewMenuLevel
+MRUItem0=/Game/GhostGang/Levels/NewMenuLevel
+MRUItem1=/Game/GhostGang/Levels/Level01
 MRUItem2=/Game/GhostGang/Levels/BuyLevel
 MRUItem3=/Game/GhostGang/Levels/MenuLevel
 MRUItem4=/Game/GhostGang/Level01
