--- a/GhostGang/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GhostGang/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1356,Y=734)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-CBALF3T
 LastExecutedLaunchName=DESKTOP-CBALF3T
 LastExecutedPIEPreviewDevice=
@@ -153,7 +153,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/GhostGang/SM
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -182,10 +182,13 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/GhostGang/Levels/NewMenuLevel
+LastLevel=/Game/GhostGang/Levels/Level01
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/GhostGang/BP/Traps/HauntedPainting.HauntedPainting
+OpenAssetsAtExit=/Game/GhostGang/BP/HotelRoom.HotelRoom
+OpenAssetsAtExit=/Game/GhostGang/BP/Door.Door
 
 [PluginBrowser]
 InstalledPlugins=UltraleapTracking
@@ -210,8 +213,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MRU]
-MRUItem0=/Game/GhostGang/Levels/NewMenuLevel
-MRUItem1=/Game/GhostGang/Levels/Level01
+MRUItem0=/Game/GhostGang/Levels/Level01
+MRUItem1=/Game/GhostGang/Levels/NewMenuLevel
 MRUItem2=/Game/GhostGang/Levels/BuyLevel
 MRUItem3=/Game/GhostGang/Levels/MenuLevel
 MRUItem4=/Game/GhostGang/Level01
@@ -310,11 +313,11 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
-HotelRoom_C=
-SceneComponent=
+HotelRoom_C=StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+SceneComponent=CapsuleComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,
 PlayerController=
 MainMenu_C=
-BrushComponent=BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+BrushComponent=
 Brush=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 NavMeshBoundsVolume=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 LeapMotionPlayer_C=
@@ -387,36 +390,43 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 DemoInstructions_C=
 HauntedLamp_C=BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 CableComponent=BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+HauntedPainting_C=
+Door_C=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,IOSRuntimeSettings.Build.Remote Build Options,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GhostGang/BP/HotelRoom
-MRUItem1=/Game/GhostGang/BP/Traps/HauntedLamp
-MRUItem2=/Game/GhostGang/BP/WDGT/DemoInstructions
-MRUItem3=/Game/GhostGang/BP/BP_npcTest
-MRUItem4=/Game/GhostGang/Levels/Level01
-MRUItem5=/Game/GhostGang/Levels/NewMenuLevel
-MRUItem6=/Game/GhostGang/Levels/BuyLevel
-MRUItem7=/Game/GhostGang/SM/CRTbase
-MRUItem8=/Game/GhostGang/SM/CRTmonitor
-MRUItem9=/Game/GhostGang/BP/HauntedBookshelf
-MRUItem10=/Game/GhostGang/BP/WDGT/Controls
-MRUItem11=/Game/GhostGang/BP/CustomButtonV2
-MRUItem12=/Game/GhostGang/BP/MainMenuMode
-MRUItem13=/Game/GhostGang/BP/NewMenuPlayer
-MRUItem14=/Game/GhostGang/BP/LPMTN_PlayerCamera
-MRUItem15=/Game/GhostGang/Levels/MenuLevel
-MRUItem16=/Game/GhostGang/BP/WDGT/MainMenu
-MRUItem17=/Game/GhostGang/BP/BP_NewPlayerMan
-MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem19=/Game/GhostGang/BP/WDGT/LoadingBar
+MRUItem0=/Game/GhostGang/SM/Door
+MRUItem1=/Game/GhostGang/SM/DoorHinge
+MRUItem2=/Game/GhostGang/BP/Door
+MRUItem3=/Game/GhostGang/BP/HotelRoom
+MRUItem4=/Game/GhostGang/BP/Traps/HauntedPainting
+MRUItem5=/Game/GhostGang/Levels/Level01
+MRUItem6=/Game/GhostGang/BP/Traps/HauntedLamp
+MRUItem7=/Game/GhostGang/BP/WDGT/DemoInstructions
+MRUItem8=/Game/GhostGang/BP/BP_npcTest
+MRUItem9=/Game/GhostGang/Levels/NewMenuLevel
+MRUItem10=/Game/GhostGang/Levels/BuyLevel
+MRUItem11=/Game/GhostGang/SM/CRTbase
+MRUItem12=/Game/GhostGang/SM/CRTmonitor
+MRUItem13=/Game/GhostGang/BP/HauntedBookshelf
+MRUItem14=/Game/GhostGang/BP/WDGT/Controls
+MRUItem15=/Game/GhostGang/BP/CustomButtonV2
+MRUItem16=/Game/GhostGang/BP/MainMenuMode
+MRUItem17=/Game/GhostGang/BP/NewMenuPlayer
+MRUItem18=/Game/GhostGang/BP/LPMTN_PlayerCamera
+MRUItem19=/Game/GhostGang/Levels/MenuLevel
 
 [PlacementMode]
+RecentlyPlaced=/Game/GhostGang/BP/Door.Door;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
+RecentlyPlaced=/Game/GhostGang/BP/Traps/HauntedPainting.HauntedPainting;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/GhostGang/Materials+Textures/carpet_tile_2_Mat.carpet_tile_2_Mat;
 RecentlyPlaced=/Game/GhostGang/BP/Traps/HauntedLamp.HauntedLamp;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
 RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock.M_Rock;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/GhostGang/BP/HotelRoom.HotelRoom;
 RecentlyPlaced=/Game/GhostGang/SM/CRTmonitor.CRTmonitor;
@@ -426,11 +436,6 @@ RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBo
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/GhostGang/Particle_Effects/PlantingEffect.PlantingEffect;
-RecentlyPlaced=/Game/GhostGang/BP/ParentTrap_Child.ParentTrap_Child;
-RecentlyPlaced=/Game/GhostGang/BP/ParentTrap.ParentTrap;
-RecentlyPlaced=/Game/GhostGang/BP/Traps/HauntedShelf.HauntedShelf;
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2182,6 +2187,31 @@ SpotLightComponent.Cooking=True
 SpotLightComponent.Events=True
 HauntedLamp_C.Default=True
 K2Node_MakeStruct.PinOptions=True
+HauntedPainting_C.Tick=True
+HauntedPainting_C.Default=True
+HauntedPainting_C.Replication=True
+HauntedPainting_C.Rendering=True
+HauntedPainting_C.Collision=True
+HauntedPainting_C.Actor=True
+HauntedPainting_C.Input=True
+HauntedPainting_C.TransformCommon=True
+Door_C.Tick=True
+Door_C.Replication=True
+Door_C.Rendering=True
+Door_C.Collision=True
+Door_C.Actor=True
+Door_C.Input=True
+Door_C.TransformCommon=True
+PhysicsHandleComponent.Variable=True
+PhysicsHandleComponent.Sockets=True
+PhysicsHandleComponent.PhysicsHandle=True
+PhysicsHandleComponent.Tags=True
+PhysicsHandleComponent.ComponentTick=True
+PhysicsHandleComponent.ComponentReplication=True
+PhysicsHandleComponent.Activation=True
+PhysicsHandleComponent.Cooking=True
+PhysicsHandleComponent.Events=True
+PhysicsHandleComponent.Collision=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -2208,6 +2238,8 @@ WidgetComponent.UserInterface=False
 WidgetComponent.Physics=True
 PhysicsConstraintComponent.Linear Limits=True
 CableComponent.Cable=True
+PhysicsConstraintComponent.AngularMotor=True
+StaticMeshActor.Collision=True
 
 [AssetEditorToolkitTabLocation]
 /Game/GhostGang/GhostMode.GhostMode=0
@@ -2263,6 +2295,8 @@ CableComponent.Cable=True
 /Game/GhostGang/Particle_Effects/PlantingEffect.PlantingEffect=0
 /Game/GhostGang/BP/NewMenuPlayer.NewMenuPlayer=0
 /Game/GhostGang/BP/WDGT/Controls.Controls=0
+/Game/GhostGang/SM/DoorHinge.DoorHinge=0
+/Game/GhostGang/SM/Door.Door=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2397,6 +2431,8 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Respons
 DemoInstructions_C="\"Object.Appearance.ColorAndOpacity\" "
 CableComponent=
 HauntedLamp_C=
+HauntedPainting_C="\"Object.Scale\" "
+StaticMeshActor=
 
 [Directories2]
 UNR=../../../../github/GhostGang/GhostGang/Content/GhostGang/Levels
@@ -3608,9 +3644,6 @@ bMaterialQualityUsed[3]=0
 /Game/GhostGang/SM=(R=0.000000,G=1.000000,B=0.951383,A=1.000000)
 /Game/GhostGang/Particle_Effects=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
 /Game/GhostGang/Materials+Textures=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
-
-[FEditorModeTools]
-CoordSystem=1
 
 [SurfaceSelection]
 PreserveScaleRatio=True
